--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,7 @@ footer {
     border-top: 1px solid #666;
     margin-top: 20px;
 }
+img{
+    border: 3px solid rgb(25, 194, 218);
+    height: 300px;
+}
