--- a/CSS externo/style3.css
+++ b/CSS externo/style3.css
@@ -1,68 +1,41 @@
-body {
-    padding: 20px;
+nav{
+    text-align: left;
 }
 
+table, th, td {
+    border: 3px solid white;
+    border-collapse: collapse; 
+    background-color: rgb(245, 223, 220);
 
-/*Estilo para a tag paragrafo*/
-p {
-    color: green;
-    font-size: 30px;
 }
 
-/* Estilo para a classe de paragrafos numerados */
-
-.p-numerados {
-    font-family:'Courier New', Courier, monospace;
-    color:violet;
-    background-color: yellowgreen;
+th, td {
+    padding: 8px 20px;
 }
 
-#p1 {
-    background-color: black;
+th {
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    
+}
+
+td {
+    width: 4500px;
+    font-size: 18px
+}
+footer {
+    font-size: 20px;
     color: red;
+    text-align: center
+  
 }
 
-h2 {
-    border-bottom: 1px solid red;
-}
-
-/* Todos elementos da pagina */
-
-* {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.decoration {
-    text-decoration: none;
-    transition: all 0.5s;
-}
-
-a:visited {
+h1 {
     color: red
 }
-
-a:hover {
-    background-color: yellow;
-}
-
-/*Fontes*/
-
-.serifada {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.sem-serifada{
+    
+*{
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.monoespacada {
-    font-family: 'Courier New', Courier, monospace;
-}
-
-.caixa {
-    width: 150px;
-    height: 100px;
-    border: 10px solid blue;
-    padding: 100px;
-    margin: 100px;
+    
 }
